# MathToCpp

./: CMakeLists.txt  README.md  main.cpp
MathFunctions/: CMakeLists.txt  OptionFunctions.cpp  OptionFunctions.h
